# test_dip

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.template
backend/: Makefile  debug.yml  pyproject.toml  requirements.txt
backend/alembic/: README
backend/alembic/versions/: 20241223_581da7c24405_test.py  20241223_88be8c53b22a_test.py
backend/src/: admin.py  main.py
backend/src/app/api/: router.py
backend/src/app/api/v1/: book.py  feedback.py  theme_page.py  upload_file.py
backend/src/app/models/: .model_template.txt  mixin.py
backend/src/app/models/book/: book.py
backend/src/app/models/theme_page/: theme_page.py
backend/src/app/models/user/: user.py
backend/src/app/repositories/: exceptions.py
backend/src/app/repositories/book/: book.py
backend/src/app/repositories/feedback/: feedback.py
backend/src/app/repositories/theme_page/: theme_page.py
backend/src/app/repositories/user/: user.py
backend/src/app/schemas/: book.py  theme_page.py  user.py
backend/src/app/services/: book.py  feedback.py  theme_page.py  user.py
backend/src/app/utils/: ftp_repo.py  ftp_serv.py  repository.py  unitofwork.py
backend/src/app_config/: app_settings.py  config_admin.py  config_db.py  config_ftp.py  config_redis.py
backend/src/database/: all_models.py  database.py  db_accessor.py  types.py
backend/src/redisrepo/: dependencies.py
frontend/: Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/output/: index.html  main.css  main.js  snow-queen.html
frontend/src/: index.html  snow-queen.html
(+7 files in other folders)
